# Awesome-AI-Assistant

./: README.md  main.py  pyproject.toml
app/: main.py  rag.py  rag_implementation.ipynb
app/config/: settings.py
app/graph/: builder.py  state.py
app/graph/nodes/: chat_node.py
app/llms/: __init__.py  openai_model.py
app/tools/: tools.py
