[project]
name = "awesome-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langsmith>=0.8.8",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
