[project]
name = "awesome-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.14.4",
    "faiss-cpu",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.2",
    "langsmith>=0.8.8",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
